Mit Colab erstellt

--- a/Kopie_von_Tutorial1.ipynb
+++ b/Kopie_von_Tutorial1.ipynb
@@ -155,7 +155,7 @@
         "Variables and types in Python are very similar to other programming languages. Run the examples below to see what happens.\n",
         "\n",
         "❓ What happens in the command `int(my_float)`?\n",
-        "I overwrite my_float; I cast an integer to the previous my_float value."
+        "It converts the float to integer."
       ]
     },
     {
@@ -511,7 +511,7 @@
       "cell_type": "code",
       "source": [
         "# Slicing\n",
-        "slice = str(my_string[0:5])\n",
+        "slice = str(my_string[:5])\n",
         "print(slice)"
       ],
       "metadata": {
@@ -519,9 +519,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "681e8ba1-83b1-49ec-a331-d41060275774"
+        "outputId": "507a5136-0728-47b4-f6a3-482177aa9e2f"
       },
-      "execution_count": 18,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
