Mit Colab erstellt

--- a/Kopie_von_Tutorial1.ipynb
+++ b/Kopie_von_Tutorial1.ipynb
@@ -135,7 +135,7 @@
         "if x == 1:\n",
         "  print(\"x is 1.\")"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +186,7 @@
         "print(my_float)\n",
         "\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -223,7 +223,7 @@
         "print(12/(4+3))\n",
         "print(3*3)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,7 +248,7 @@
         "# Exercise: Print the variable my_string three times without repeating the variable itself\n",
         "print(my_string * 3)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,7 +301,7 @@
         "one_more = \"Don't worry about apostrophes\"\n",
         "print(one_more)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,7 +327,7 @@
         },
         "outputId": "4eb9a221-7107-4953-9807-4ac36146c5dc"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -374,7 +374,7 @@
         },
         "outputId": "f7ac1dc2-032a-4251-a640-dbaa9a24a751"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -418,7 +418,7 @@
         "if isinstance(myint, int) and myint == 20:\n",
         "    print(\"Integer: %d\" % myint)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -454,7 +454,7 @@
         "my_string = \"Introduction to Computational Linguistics\"\n",
         "print(len(my_string))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -487,7 +487,7 @@
         },
         "outputId": "c761878f-0f21-46d9-c661-2acc5819ffb9"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -521,7 +521,7 @@
         },
         "outputId": "507a5136-0728-47b4-f6a3-482177aa9e2f"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -561,7 +561,7 @@
         "\n",
         "print(\"Splitting the string based on blank space creates a list\", my_string.split(\" \"))\n"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -612,7 +612,7 @@
         "if tester.startswith(\"Hey\"):\n",
         "    print(\"String starts with 'Hey'. Good!\")"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -657,7 +657,7 @@
       "metadata": {
         "id": "qCs_0Ayn_zzq"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -667,10 +667,22 @@
         "print(branches[0])"
       ],
       "metadata": {
-        "id": "IF8vDuNTAVVf"
+        "id": "IF8vDuNTAVVf",
+        "outputId": "29edb4b9-eeed-427a-c05b-816d0db8dcf5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "phonetics\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -680,10 +692,22 @@
         "print(branches)"
       ],
       "metadata": {
-        "id": "M7gYTvG0Aadc"
+        "id": "M7gYTvG0Aadc",
+        "outputId": "91d82268-48d4-42f1-e100-666034d49048",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['phonetics', 'phonology', 'morphology']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -692,10 +716,22 @@
         "print(len(branches))"
       ],
       "metadata": {
-        "id": "MPP9YKwbAiPQ"
+        "id": "MPP9YKwbAiPQ",
+        "outputId": "7921811a-d7f7-45ae-c5b4-6132676e9cae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -704,10 +740,22 @@
         "print(branches.count(\"phonology\"))"
       ],
       "metadata": {
-        "id": "es_5-k0yB8Ga"
+        "id": "es_5-k0yB8Ga",
+        "outputId": "fe50a542-81a7-4198-ec6a-b46e78cad2cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -718,10 +766,22 @@
         "print(branches)"
       ],
       "metadata": {
-        "id": "NjwD6wV8AnQ9"
+        "id": "NjwD6wV8AnQ9",
+        "outputId": "89be80c0-a1bb-4104-f120-a6e65421f06c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['phonetics', 'phonology', 'morphology', 'semantics', 'pragmatics']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -733,7 +793,7 @@
       "metadata": {
         "id": "U2AuGq14A9XK"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -744,10 +804,22 @@
         "print(stuff)"
       ],
       "metadata": {
-        "id": "XdYw6svYA_Z8"
+        "id": "XdYw6svYA_Z8",
+        "outputId": "e64cfd54-5441-4d81-994a-903fe1d7d246",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[3, ['Hey', 'there!'], -0.31, None]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -760,7 +832,11 @@
     },
     {
       "metadata": {
-        "id": "jLMEOLeNFuCd"
+        "id": "jLMEOLeNFuCd",
+        "outputId": "1de8e0ef-669b-45af-c8f2-ecc59aed5826",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -771,7 +847,11 @@
         "x_list = [x]\n",
         "y_list = [y]\n",
         "# big_list should be a combination of the two lists above\n",
-        "big_list =\n",
+        "for i in range(9):\n",
+        "  x_list.append(x)\n",
+        "  y_list.append(y)\n",
+        "\n",
+        "big_list = x_list + y_list\n",
         "\n",
         "print(\"x_list contains %d objects\" % len(x_list))\n",
         "print(\"y_list contains %d objects\" % len(y_list))\n",
@@ -781,10 +861,27 @@
         "if x_list.count(x) == 10 and y_list.count(y) == 10:\n",
         "    print(\"Almost there...\")\n",
         "if big_list.count(x) == 10 and big_list.count(y) == 10:\n",
-        "    print(\"Great!\")"
+        "    print(\"Great!\")\n",
+        "\n",
+        "print(x_list)\n",
+        "print(big_list)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x_list contains 10 objects\n",
+            "y_list contains 10 objects\n",
+            "big_list contains 20 objects\n",
+            "Almost there...\n",
+            "Great!\n",
+            "['try', 'try', 'try', 'try', 'try', 'try', 'try', 'try', 'try', 'try']\n",
+            "['try', 'try', 'try', 'try', 'try', 'try', 'try', 'try', 'try', 'try', 'this', 'this', 'this', 'this', 'this', 'this', 'this', 'this', 'this', 'this']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -799,13 +896,26 @@
       "cell_type": "code",
       "source": [
         "# Your code to print \"This\", \"is\"\n",
-        "list1 = [\"This\", \"is\", \"a\", \"list\"]"
+        "list1 = [\"This\", \"is\", \"a\", \"list\"]\n",
+        "print(list1[:2])"
       ],
       "metadata": {
-        "id": "5GAt6JT0DZ2O"
+        "id": "5GAt6JT0DZ2O",
+        "outputId": "78417082-4a73-4c33-83bc-894a2ced4c74",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['This', 'is']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -817,10 +927,25 @@
         "  print(elem_list1, elem_list2)"
       ],
       "metadata": {
-        "id": "y2gr2UDWIg_i"
+        "id": "y2gr2UDWIg_i",
+        "outputId": "18b6b539-2192-4492-af10-49450921704b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This 1\n",
+            "is 2\n",
+            "a 3\n",
+            "list 4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -834,10 +959,32 @@
         "set(list1).intersection(list2)"
       ],
       "metadata": {
-        "id": "ANFjzysidsed"
+        "id": "ANFjzysidsed",
+        "outputId": "833adf9c-8720-4b7d-a63a-4d777ccb7a0c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'This', 'list', 'a', 'is'}\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'This', 'a', 'is', 'list'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -860,7 +1007,7 @@
       "metadata": {
         "id": "UionLcFBEqTH"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -873,10 +1020,22 @@
         "print(grades)"
       ],
       "metadata": {
-        "id": "2y4QnivKFg4F"
+        "id": "2y4QnivKFg4F",
+        "outputId": "b1f31b9d-f769-4cdb-fece-455d4e2c15c6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Elon': '5', 'Mary': '1'}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -885,10 +1044,22 @@
         "print(\"Elon\" in grades)"
       ],
       "metadata": {
-        "id": "SzAnO42TGt8n"
+        "id": "SzAnO42TGt8n",
+        "outputId": "7d3db687-9d91-4c60-a020-b2a1ac840967",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -897,10 +1068,22 @@
         "print(grades[\"Elon\"])"
       ],
       "metadata": {
-        "id": "t14MPvCoGzQq"
+        "id": "t14MPvCoGzQq",
+        "outputId": "23e832a4-d1ab-48f6-e2d7-2c65f78158be",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -910,10 +1093,22 @@
         "print(grades)"
       ],
       "metadata": {
-        "id": "Yb8lqGGCG7SN"
+        "id": "Yb8lqGGCG7SN",
+        "outputId": "b78aa99a-bdbe-4c25-abdc-b12686ae1a2d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Elon': 4, 'Mary': '1'}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -926,10 +1121,25 @@
         "  print(value)"
       ],
       "metadata": {
-        "id": "ytiOgQHyHUmm"
+        "id": "ytiOgQHyHUmm",
+        "outputId": "cb6d1553-53aa-4579-a00b-f5302f9d8cf0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Elon 4\n",
+            "Mary 1\n",
+            "4\n",
+            "1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -947,15 +1157,31 @@
         "list2 = [1, 2, 1]\n",
         "\n",
         "grades = {}\n",
+        "for i in range(len(list1)):\n",
+        "  grades[list1[i]] = list2[i]\n",
+        "\n",
+        "grades = {list1[i]: list2[i] for i in range(len(list1))}\n",
         "\n",
         "#The result should be {'Anna': 1, 'Hans': 2, 'Tom': 1}\n",
         "print(grades)"
       ],
       "metadata": {
-        "id": "IVMUvAecHqwo"
+        "id": "IVMUvAecHqwo",
+        "outputId": "53a1aaab-48af-4673-cbc6-8e97e4248788",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Anna': 1, 'Hans': 2, 'Tom': 1}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -965,10 +1191,22 @@
         "print(grades)"
       ],
       "metadata": {
-        "id": "Pjg2fTTwHC1i"
+        "id": "Pjg2fTTwHC1i",
+        "outputId": "ffe304ef-523f-454b-88ab-879e9a100828",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Anna': 1, 'Hans': 2}\n"
+          ]
+        }
+      ]
     }
   ]
 }
