Mit Colab erstellt

--- a/homeexercise1.ipynb
+++ b/homeexercise1.ipynb
@@ -143,10 +143,10 @@
       ],
       "metadata": {
         "id": "SRiR8WeRXVOm",
-        "outputId": "57b37239-cb3a-4d26-ae12-324bfe2db305",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "57b37239-cb3a-4d26-ae12-324bfe2db305"
       },
       "execution_count": 2,
       "outputs": [
@@ -226,10 +226,10 @@
       ],
       "metadata": {
         "id": "knGLoU0kXaZb",
-        "outputId": "bd47774e-fd80-49d6-dfd0-a91ff76e0ced",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bd47774e-fd80-49d6-dfd0-a91ff76e0ced"
       },
       "execution_count": 5,
       "outputs": [
@@ -312,10 +312,10 @@
       ],
       "metadata": {
         "id": "-p7kAp-ZYNz7",
-        "outputId": "86fd45c1-a08b-4cbe-b9d2-00756e478d66",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "86fd45c1-a08b-4cbe-b9d2-00756e478d66"
       },
       "execution_count": 6,
       "outputs": [
@@ -363,10 +363,10 @@
       ],
       "metadata": {
         "id": "2JRubivyaSBx",
-        "outputId": "ba62d38d-b0cf-4788-fafa-ec6ec534e5cc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ba62d38d-b0cf-4788-fafa-ec6ec534e5cc"
       },
       "execution_count": 7,
       "outputs": [
@@ -584,11 +584,11 @@
         "print(entity_counts)"
       ],
       "metadata": {
-        "id": "NftYBdc8CbJz",
-        "outputId": "c6b14767-5a75-481d-ffcc-d42714fac452",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NftYBdc8CbJz",
+        "outputId": "c6b14767-5a75-481d-ffcc-d42714fac452"
       },
       "execution_count": 28,
       "outputs": [
@@ -748,11 +748,11 @@
       ],
       "metadata": {
         "id": "3CWq0ejhceIH",
-        "outputId": "2f04f219-d61f-4650-f3a2-390b62c8a3e3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "2f04f219-d61f-4650-f3a2-390b62c8a3e3"
       },
       "execution_count": 17,
       "outputs": [
@@ -1206,10 +1206,10 @@
       ],
       "metadata": {
         "id": "o3NW0KRYeCPs",
-        "outputId": "1b6a722e-2386-4c9a-8b6f-37e6a45c992e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1b6a722e-2386-4c9a-8b6f-37e6a45c992e"
       },
       "execution_count": 29,
       "outputs": [
@@ -1292,10 +1292,10 @@
       ],
       "metadata": {
         "id": "AeDyii4SeT3-",
-        "outputId": "232ebd49-ba28-426e-d759-bbc08a3f2ea7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "232ebd49-ba28-426e-d759-bbc08a3f2ea7"
       },
       "execution_count": 30,
       "outputs": [
@@ -1334,9 +1334,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "trouble with more complex phrases (\"republikanische Ex-Gouverneur\", \"Z.B. Browser-AddOns wie Adblocker\")\n",
+        "The NER did not perform as well in this German text example as in the previous tasks in English. It did not recognise all named entities (e.g., \"Kamela Harris\"), and it caught some that are not named entities (e.g., \"republikanische\").\n",
+        "It certainly had trouble with more complex phrases (\"republikanische Ex-Gouverneur\", \"Z.B. Browser-AddOns wie Adblocker\").\n",
+        "The MISC label is used a few times which might indicate that the model did not know what to do with those entities and that they don't fit into the exisitng NER types but that the model still wanted to extract them because it thinks that they are important named entities. It also might indicate that there is some room for improvement when it comes to grouping entities that do not fit into the commonly used ones in German texts.\n",
         "\n",
-        "The MISC label covers a wide range of terms here that don’t correspond to a person, location, or organization, indicating room for improvement in classifying non-standard entities in German texts\n",
         "\n",
         "\n"
       ],
