--- a/homeexercise1.ipynb
+++ b/homeexercise1.ipynb
@@ -678,23 +678,23 @@
       "source": [
         "#Here I use nlp.lg:\n",
         "\n",
-        "#import spacy\n",
-        "#from collections import Counter\n",
+        "import spacy\n",
+        "from collections import Counter\n",
         "\n",
         "#nlp = spacy.load(\"en_core_web_sm\")\n",
-        "#nlp_lg = spacy.load(\"en_core_web_lg\")\n",
+        "nlp_lg = spacy.load(\"en_core_web_lg\")\n",
         "#nlp_trf = spacy.load(\"en_core_web_trf\")\n",
         "\n",
         "# I use the original not preprocessed article:\n",
-        "#doc = nlp(article.text)\n",
+        "doc = nlp(article.text)\n",
         "\n",
-        "#for ent in doc.ents:\n",
-        " # print(ent.text, ent.start_char, ent.end_char, ent.label_)\n",
+        "for ent in doc.ents:\n",
+        "  print(ent.text, ent.start_char, ent.end_char, ent.label_)\n",
         "\n",
         "# Calculate the number of NERs for each NER type that the model identifies:\n",
-        "#entity_counts = Counter([ent.label_ for ent in doc.ents])\n",
-        "#print()\n",
-        "#print(entity_counts)"
+        "entity_counts = Counter([ent.label_ for ent in doc.ents])\n",
+        "print()\n",
+        "print(entity_counts)"
       ],
       "metadata": {
         "id": "qdKi-YHGClQt"
@@ -706,23 +706,23 @@
       "cell_type": "code",
       "source": [
         "#Here I use nlp.trf:\n",
-        "#import spacy\n",
-        "#from collections import Counter\n",
+        "import spacy\n",
+        "from collections import Counter\n",
         "\n",
         "#nlp = spacy.load(\"en_core_web_sm\")\n",
         "#nlp_lg = spacy.load(\"en_core_web_lg\")\n",
-        "#nlp_trf = spacy.load(\"en_core_web_trf\")\n",
+        "nlp_trf = spacy.load(\"en_core_web_trf\")\n",
         "\n",
         "# I use the original not preprocessed article:\n",
-        "#doc = nlp(article.text)\n",
+        "doc = nlp(article.text)\n",
         "\n",
-        "#for ent in doc.ents:\n",
-        " # print(ent.text, ent.start_char, ent.end_char, ent.label_)\n",
+        "for ent in doc.ents:\n",
+        "  print(ent.text, ent.start_char, ent.end_char, ent.label_)\n",
         "\n",
         "# Calculate the number of NERs for each NER type that the model identifies:\n",
-        "#entity_counts = Counter([ent.label_ for ent in doc.ents])\n",
-        "#print()\n",
-        "#print(entity_counts)"
+        "entity_counts = Counter([ent.label_ for ent in doc.ents])\n",
+        "print()\n",
+        "print(entity_counts)"
       ],
       "metadata": {
         "id": "ZpLgXnJxbMCf"
