Mit Colab erstellt

--- a/homeexercise1.ipynb
+++ b/homeexercise1.ipynb
@@ -686,10 +686,10 @@
       ],
       "metadata": {
         "id": "qdKi-YHGClQt",
-        "outputId": "f9b2f4e4-cc19-48db-f88b-110ff07b9d24",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f9b2f4e4-cc19-48db-f88b-110ff07b9d24"
       },
       "execution_count": 7,
       "outputs": [
@@ -798,10 +798,10 @@
       ],
       "metadata": {
         "id": "ZpLgXnJxbMCf",
-        "outputId": "08203dbb-bba3-4ec2-802e-bfc3ac2c83dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "08203dbb-bba3-4ec2-802e-bfc3ac2c83dc"
       },
       "execution_count": 8,
       "outputs": [
@@ -1357,13 +1357,80 @@
     {
       "cell_type": "code",
       "source": [
-        "# Your code here"
+        "#Here I use nlp.trf on the preprocessed version:\n",
+        "\n",
+        "nlp_trf = spacy.load(\"en_core_web_trf\")\n",
+        "\n",
+        "text_preprocessed = ' '.join(unique_words_after_preprocessing)  # Join list items with spaces because the spaCy nlp() function expects a single string as input, not a list!\n",
+        "\n",
+        "doc = nlp_trf(text_preprocessed)\n",
+        "\n",
+        "for ent in doc.ents:\n",
+        "  print(ent.text, ent.start_char, ent.end_char, ent.label_)\n",
+        "\n",
+        "# Calculate the number of NERs for each NER type that the model identifies:\n",
+        "entity_counts = Counter([ent.label_ for ent in doc.ents])\n",
+        "print()\n",
+        "print(entity_counts)"
       ],
       "metadata": {
-        "id": "2cxBSOWmc-5x"
+        "id": "2cxBSOWmc-5x",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8a0e8c56-f75b-40fa-b5d0-27058d02fc2a"
       },
-      "execution_count": 10,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tokyo 41 46 GPE\n",
+            "korea 96 101 GPE\n",
+            "eaten london 164 176 PERSON\n",
+            "italian 179 186 NORP\n",
+            "house university 229 245 ORG\n",
+            "paris creation 414 428 ORG\n",
+            "marcel 465 471 PERSON\n",
+            "true miami york 483 498 ORG\n",
+            "datuna taipei 568 581 ORG\n",
+            "hundred 617 624 CARDINAL\n",
+            "five core may 638 651 ORG\n",
+            "milan 697 702 GPE\n",
+            "america beach 711 724 ORG\n",
+            "year 809 813 DATE\n",
+            "dubai 910 915 GPE\n",
+            "seoul kong 1010 1020 GPE\n",
+            "ha 1054 1056 PERSON\n",
+            "november 1157 1165 DATE\n",
+            "subversive 1201 1211 PERSON\n",
+            "third 1419 1424 ORDINAL\n",
+            "hong 1528 1532 PERSON\n",
+            "take 1571 1575 PERSON\n",
+            "basel 1630 1635 ORG\n",
+            "first 1710 1715 ORDINAL\n",
+            "cnn 1758 1761 ORG\n",
+            "museum and 1782 1792 ORG\n",
+            "friday 1798 1804 DATE\n",
+            "three 1867 1872 CARDINAL\n",
+            "two 1978 1981 CARDINAL\n",
+            "\n",
+            "Counter({'ORG': 9, 'PERSON': 6, 'GPE': 5, 'CARDINAL': 3, 'DATE': 3, 'ORDINAL': 2, 'NORP': 1})\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "When I compare the NER output of (the in my opinion best performing spaCy model) trf on the article after it was preprocessed with the performance on the non-preprocessed article, I can say that the model recognises fewer named entities in the preprocessed article: 29 for the preprocessed article, 76 for the non-preprocessed article. The named entities that the model recognised on the preprocessed text seem to be a lot less accurate; they include quite random words in non-fitting NER types such as \"take\" in type PERSON.\n",
+        "\n",
+        "It does make sense that the NER performs worse on the preprocessed text because we made all words lowercase and this probably makes it harder for the model to recognise named entities because these is often case-sensitive, e.g. \"Apple\" the company and \"apple\" the fruit. So an important signal for the model is taken away. Moreover, we lemmatised all words which might change entity names in a way that they cannot be recognised anymore. Furthermore, numbers (type MONEY, type DATE, type TIME) are obviously not included in the NER of the preprocessed text because we had previously removed all numbers and punctuation."
+      ],
+      "metadata": {
+        "id": "PKgkx06j84Jq"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1408,9 +1475,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4009219a-8c71-4492-ba4e-1b1dfa25dae8"
+        "outputId": "1e70ef44-2609-4666-a3c3-ec2aebc490cf"
       },
-      "execution_count": 11,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1418,7 +1485,7 @@
           "text": [
             "Collecting de-core-news-sm==3.7.0\n",
             "  Downloading https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.7.0/de_core_news_sm-3.7.0-py3-none-any.whl (14.6 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m14.6/14.6 MB\u001b[0m \u001b[31m56.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m14.6/14.6 MB\u001b[0m \u001b[31m48.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: spacy<3.8.0,>=3.7.0 in /usr/local/lib/python3.10/dist-packages (from de-core-news-sm==3.7.0) (3.7.5)\n",
             "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in /usr/local/lib/python3.10/dist-packages (from spacy<3.8.0,>=3.7.0->de-core-news-sm==3.7.0) (3.0.12)\n",
             "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /usr/local/lib/python3.10/dist-packages (from spacy<3.8.0,>=3.7.0->de-core-news-sm==3.7.0) (1.0.5)\n",
@@ -1492,9 +1559,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "90d3221d-74cd-4790-ea3e-45e380aade1a"
+        "outputId": "fbfe7fe4-b4b5-4abe-b0bf-d1a067ba780f"
       },
-      "execution_count": 12,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -1533,7 +1600,7 @@
       "source": [
         "The NER did not perform as well in this German text example as in the previous tasks in English. It did not recognise all named entities (e.g., \"Kamela Harris\"), and it caught some that are not named entities (e.g., \"republikanische\").\n",
         "It certainly had trouble with more complex phrases (\"republikanische Ex-Gouverneur\", \"Z.B. Browser-AddOns wie Adblocker\").\n",
-        "The MISC label is used a few times which might indicate that the model did not know what to do with those entities and that they don't fit into the exisitng NER types but that the model still wanted to extract them because it thinks that they are important named entities. It also might indicate that there is some room for improvement when it comes to grouping entities that do not fit into the commonly used ones in German texts.\n",
+        "The MISC label is used a few times which might indicate that the model did not know what to do with those entities and that they don't fit into the existing NER types but that the model still wanted to extract them because it thought that they were important named entities. It also might indicate that there is some room for improvement when it comes to categorising entities that do not fit into the commonly used ones in this model.\n",
         "\n",
         "\n",
         "\n"
